// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate.create custom folder and schema filename name ok 1`] = `
Array [
  Object {
    "source": "my_db",
    "tag": "CreateSource",
  },
  Object {
    "argument": "provider",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"sqlite\\"",
  },
  Object {
    "argument": "url",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"***\\"",
  },
  Object {
    "argument": "default",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "true",
  },
  Object {
    "model": "User",
    "tag": "CreateModel",
  },
  Object {
    "arity": "Required",
    "field": "id",
    "model": "User",
    "tag": "CreateField",
    "type": "Int",
  },
  Object {
    "location": Object {
      "directive": "id",
      "path": Object {
        "field": "id",
        "model": "User",
        "tag": "Field",
      },
    },
    "tag": "CreateDirective",
  },
]
`;

exports[`migrate.create custom folder and schema filename name ok 2`] = `Array []`;

exports[`migrate.create custom schema filename ok 1`] = `
Array [
  Object {
    "source": "my_db",
    "tag": "CreateSource",
  },
  Object {
    "argument": "provider",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"sqlite\\"",
  },
  Object {
    "argument": "url",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"***\\"",
  },
  Object {
    "argument": "default",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "true",
  },
  Object {
    "model": "User",
    "tag": "CreateModel",
  },
  Object {
    "arity": "Required",
    "field": "id",
    "model": "User",
    "tag": "CreateField",
    "type": "Int",
  },
  Object {
    "location": Object {
      "directive": "id",
      "path": Object {
        "field": "id",
        "model": "User",
        "tag": "Field",
      },
    },
    "tag": "CreateDirective",
  },
]
`;

exports[`migrate.create custom schema filename ok 2`] = `Array []`;

exports[`migrate.create dashes ok 1`] = `
Array [
  Object {
    "source": "my_db",
    "tag": "CreateSource",
  },
  Object {
    "argument": "provider",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"sqlite\\"",
  },
  Object {
    "argument": "url",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"***\\"",
  },
  Object {
    "argument": "default",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "true",
  },
  Object {
    "model": "User",
    "tag": "CreateModel",
  },
  Object {
    "arity": "Required",
    "field": "id",
    "model": "User",
    "tag": "CreateField",
    "type": "Int",
  },
  Object {
    "location": Object {
      "directive": "id",
      "path": Object {
        "field": "id",
        "model": "User",
        "tag": "Field",
      },
    },
    "tag": "CreateDirective",
  },
]
`;

exports[`migrate.create dashes ok 2`] = `Array []`;

exports[`migrate.create invalid ok 1`] = `
Array [
  Object {
    "source": "my_db",
    "tag": "CreateSource",
  },
  Object {
    "argument": "provider",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"sqlite\\"",
  },
  Object {
    "argument": "url",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"***\\"",
  },
  Object {
    "argument": "default",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "true",
  },
  Object {
    "model": "User",
    "tag": "CreateModel",
  },
  Object {
    "arity": "Required",
    "field": "id",
    "model": "User",
    "tag": "CreateField",
    "type": "Int",
  },
  Object {
    "location": Object {
      "directive": "id",
      "path": Object {
        "field": "id",
        "model": "User",
        "tag": "Field",
      },
    },
    "tag": "CreateDirective",
  },
  Object {
    "arity": "Optional",
    "field": "canBeNull",
    "model": "User",
    "tag": "CreateField",
    "type": "String",
  },
]
`;

exports[`migrate.create invalid ok 2`] = `Array []`;

exports[`migrate.create invalid ok 3`] = `
"
Prisma Migrate just created your migration XXXXXXXXXXXXXX-init in

migrations/
  └─ XXXXXXXXXXXXXX-init/
    └─ steps.json
    └─ schema.prisma
    └─ README.md

Run prisma migrate up --experimental to apply the migration
"
`;

exports[`migrate.create invalid ok 4`] = `
Array [
  Object {
    "arity": "Required",
    "field": "requiredSomething",
    "model": "User",
    "tag": "CreateField",
    "type": "String",
  },
  Object {
    "arity": "Required",
    "field": "canBeNull",
    "model": "User",
    "tag": "UpdateField",
  },
]
`;

exports[`migrate.create invalid ok 5`] = `
Array [
  Object {
    "description": "You are about to alter the column \`canBeNull\` on the \`User\` table, which still contains 1 non-null values. The data in that column could be lost.",
  },
  Object {
    "description": "Added the required column \`requiredSomething\` to the \`User\` table without a default value. There are 1 rows in this table, it is not possible to execute this migration.",
  },
]
`;

exports[`migrate.create invalid ok 6`] = `
"

⚠️ We found migration(s) that cannot be executed:

  • Added the required column \`requiredSomething\` to the \`User\` table without a default value. There are 1 rows in this table, it is not possible to execute this migration.
"
`;

exports[`migrate.create invalid ok 7`] = `
"📼  migrate save --name init-2

Local datamodel Changes:

model User {
  id Int @id
  canBeNull String?
  canBeNull String
  requiredSomething String
}"
`;

exports[`migrate.create simple ok 1`] = `
Array [
  Object {
    "source": "my_db",
    "tag": "CreateSource",
  },
  Object {
    "argument": "provider",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"sqlite\\"",
  },
  Object {
    "argument": "url",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"***\\"",
  },
  Object {
    "argument": "default",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "true",
  },
  Object {
    "model": "User",
    "tag": "CreateModel",
  },
  Object {
    "arity": "Required",
    "field": "id",
    "model": "User",
    "tag": "CreateField",
    "type": "Int",
  },
  Object {
    "location": Object {
      "directive": "id",
      "path": Object {
        "field": "id",
        "model": "User",
        "tag": "Field",
      },
    },
    "tag": "CreateDirective",
  },
]
`;

exports[`migrate.create simple ok 2`] = `Array []`;

exports[`migrate.create spaces ok 1`] = `
Array [
  Object {
    "source": "my_db",
    "tag": "CreateSource",
  },
  Object {
    "argument": "provider",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"sqlite\\"",
  },
  Object {
    "argument": "url",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "\\"***\\"",
  },
  Object {
    "argument": "default",
    "location": Object {
      "source": "my_db",
      "tag": "Source",
    },
    "tag": "CreateArgument",
    "value": "true",
  },
  Object {
    "model": "User",
    "tag": "CreateModel",
  },
  Object {
    "arity": "Required",
    "field": "id",
    "model": "User",
    "tag": "CreateField",
    "type": "Int",
  },
  Object {
    "location": Object {
      "directive": "id",
      "path": Object {
        "field": "id",
        "model": "User",
        "tag": "Field",
      },
    },
    "tag": "CreateDirective",
  },
]
`;

exports[`migrate.create spaces ok 2`] = `Array []`;
